# Changes log for Data::Phrasebook::Loader::Ini

0.11	current
        - spelling fix. (thanks to Florian Schlichting & Gregor Herrmann).
        - removed License files from distro.
	- Artistic License v2 now sole license.

0.10    01/03/2007
	- Fixed META.yml typos.
	- Added META.yml test script.

0.09	22/02/2007
	- Handwritten META.yml to conform to current specs.
	- Changed all instances of LICENCE to LICENSE as *apparently*, to all
	  non-British users of this module, this a bug! I beg to differ -
	  http://dictionary.reference.com/search?q=licence
	- Added an examples directory. Nothing in it yet, except a request
	  for interesting scripts.

0.08	09/08/2005
	- upped prerequisite for Data::Phrasebook to 0.23.
	- added keywords() support.
	- added POD for continuation lines.

0.07	15/06/2005
	- upped prerequisite for Data::Phrasebook to 0.22.

0.06	13/06/2005
	- dictionary reload bug spotted (Sam Tregar).
	- added dicts() support.

0.05	25/03/2005
	- Added DSLIP information
	- Rewrote test scripts
	- Devel::Cover - 98.2%

0.04	03/03/2005
	- POD updates.

0.03    02 Mar 2005
	- Removed Test::MockObject from tests. No longer needed.

0.02    23 Feb 2005
        - revamped and renamed as part of the Data::Phrasebook framework

0.01    31 Jan 2004
        - Extracted from main Phrasebook distribution
