@@ -55,14 +55,6 @@ if you are able to pinpoint problems or even supply a patch.
 Fixes are dependent upon their severity and my availability. Should a fix not
 be forthcoming, please feel free to (politely) remind me.
 
-DSLIP
-
-  b - Beta testing
-  d - Developer
-  p - Perl-only
-  O - Object oriented
-  p - Standard-Perl: user may choose between GPL and Artistic
-
 AUTHOR
 
   Barbie, <barbie@cpan.org>
@@ -76,7 +68,7 @@ This distribution was made with a lot of help from
 
 COPYRIGHT AND LICENSE
 
-  Copyright (C) 2004-2005 Barbie for Miss Barbell Productions
+  Copyright (C) 2004-2012 Barbie for Miss Barbell Productions
 
   This module is free software; you can redistribute it and/or
   modify it under the Artistic License 2.0.
